--- a/index.html
+++ b/index.html
@@ -1,76 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
+    <title>Frontend Mentor | [Challenge Name Here]</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  Daniel Clifford
-  Verified Graduate
-
-  I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-  in the company I joined. I honestly feel I got every penny’s worth.
-
-  “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
-  transition and have heard some people who had an amazing experience here. I signed up 
-  for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
-  The next 12 weeks was the best - and most grueling - time of my life. Since completing 
-  the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
-
-  Jonathan Walters
-  Verified Graduate
-
-  The team was very supportive and kept me motivated
-
-  “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
-  for a big company. This was one of the best investments I’ve made in myself. ”
-
-  Jeanette Harmon
-  Verified Graduate
-
-  An overall wonderful and rewarding experience
-
-  “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
-  while doing something I love. ”
-
-  Patrick Abrams
-  Verified Graduate
-
-  Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-  learning from their experiences was easy.
-
-  “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
-  gave me the confidence necessary to be able to go out in the world and present myself as a capable 
-  junior developer. The standard is above the rest. You will get the personal attention you need from 
-  an incredible community of smart and amazing people. ”
-
-  Kira Whittle
-  Verified Graduate
-
-  Such a life-changing experience. Highly recommended!
-
-  “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
-  professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
-  student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
-  did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
-  project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
-  could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
-  experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
-  100% recommend! ”
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  </head>
+  <body>
+    <main>
+      <section class="contenedorGrilla">
+        <div class="grilla">
+          <div class="uno card">
+            <div class="encabezado">
+              <span>
+                <img class="foto" src="/images/image-daniel.jpg" alt="foto Daniel Clifford">
+              </span>
+              <span>
+                <span class="fontwhite">Daniel Clifford </span>
+                <br>
+                <span class="fontgris fuentecargo">Verified Graduate</span>
+              </span>
+            </div> 
+            <br>
+            <div class="titulo fontwhite letratitulo">
+              I received a job offer mid-course,
+              and the subjects I learned were current, if not more so, in the
+              company I joined. I honestly feel I got every penny’s worth.
+            </div> 
+            <br>
+            <div class="descripcion fontgris">
+              “ I was
+              an EMT for many years before I joined the bootcamp. I’ve been
+              looking to make a transition and have heard some people who had an
+              amazing experience here. I signed up for the free intro course and
+              found it incredibly fun! I enrolled shortly thereafter. The next 12
+              weeks was the best - and most grueling - time of my life. Since
+              completing the course, I’ve successfully switched careers, working
+              as a Software Engineer at a VR startup. ”
+            </div>
+          </div>
+          <div class="dos card">
+            <div class="encabezado">
+              <span>
+                <img class="foto" src="/images/image-jonathan.jpg" alt="foto Jonathan Walters">
+              </span>
+              <span>
+                <span class="fontwhite">Jonathan Walters</span>
+                <br>
+                <span class="fontgris fuentecargo">Verified Graduate</span>
+              </span>
+            </div> 
+            <br>
+            <div class="titulo fontwhite letratitulo">
+              The team was very supportive and kept me motivated
+            </div> 
+            <br>
+            <div class="descripcion fontgris">
+              “ I started as a total newbie with virtually no
+            coding skills. I now work as a mobile engineer for a big company.
+            This was one of the best investments I’ve made in myself. ”
+            </div>            
+          </div>
+          <div class="tres card">
+            <div class="encabezado">
+              <span>
+                <img class="foto" src="/images/image-jeanette.jpg" alt="foto Jeanette Harmon">
+              </span>
+              <span>
+                <span class="fontblack">Jeanette Harmon</span>
+                <br>
+                <span class="fontblackLigth fuentecargo">Verified Graduate</span>
+              </span>
+            </div> 
+            <br>
+            <div class="titulo fontblack letratitulo">
+              An overall wonderful and rewarding
+            experience
+            </div> 
+            <br>
+            <div class="descripcion fontblackLigth">
+              “ Thank you for the wonderful experience! I now have a
+              job I really enjoy, and make a good living while doing something I
+              love. ”
+            </div>
+          </div>
+          <div class="cuatro card">
+            <div class="encabezado">
+              <span>
+                <img class="foto" src="/images/image-patrick.jpg" alt="foto Patrick Abrams">
+              </span>
+              <span>
+                <span class="fontwhite">Patrick Abrams</span>
+                <br>
+                <span class="fontgris fuentecargo">Verified Graduate</span>
+              </span>
+            </div> 
+            <br>
+            <div class="titulo fontwhite letratitulo">
+              Awesome teaching support from TAs
+              who did the bootcamp themselves. Getting guidance from them and
+              learning from their experiences was easy.
+            </div> 
+            <br>
+            <div class="descripcion fontgris">
+              “ The staff seem genuinely
+            concerned about my progress which I find really refreshing. The
+            program gave me the confidence necessary to be able to go out in the
+            world and present myself as a capable junior developer. The standard
+            is above the rest. You will get the personal attention you need from
+            an incredible community of smart and amazing people. ”
+            </div>
+          </div>
+          <div class="cinco card">
+            <div class="encabezado">
+              <span>
+                <img class="foto" src="/images/image-kira.jpg" alt="foto Kira Whittle">
+              </span>
+              <span>
+                <span class="fontblack">Kira Whittle </span>
+                <br>
+                <span class="fontblackLigth fuentecargo">Verified Graduate</span>
+              </span>
+            </div> 
+            <br>
+            <div class="titulo fontblack letratitulo">
+              Such a life-changing experience.
+            Highly recommended!
+            </div> 
+            <br>
+            <div class="descripcion fontblackLigth">
+              “ Before joining the bootcamp, I’ve never
+            written a line of code. I needed some structure from professionals
+            who can help me learn programming step by step. I was encouraged to
+            enroll by a former student of theirs who can only say wonderful
+            things about the program. The entire curriculum and staff did not
+            disappoint. They were very hands-on and I never had to wait long for
+            assistance. The agile team project, in particular, was outstanding.
+            It took my learning to the next level in a way that no tutorial
+            could ever have. In fact, I’ve often referred to it during
+            interviews as an example of my developent experience. It certainly
+            helped me land a job as a full-stack developer after receiving
+            multiple offers. 100% recommend! ”
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
