--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <span>
                 <img class="foto" src="/images/image-daniel.jpg" alt="foto Daniel Clifford">
               </span>
-              <span>
+              <span class="nombreycargo">
                 <span class="fontwhite">Daniel Clifford </span>
                 <br>
                 <span class="fontgris fuentecargo">Verified Graduate</span>
@@ -59,7 +59,7 @@
               <span>
                 <img class="foto" src="/images/image-jonathan.jpg" alt="foto Jonathan Walters">
               </span>
-              <span>
+              <span class="nombreycargo">
                 <span class="fontwhite">Jonathan Walters</span>
                 <br>
                 <span class="fontgris fuentecargo">Verified Graduate</span>
@@ -81,7 +81,7 @@
               <span>
                 <img class="foto" src="/images/image-jeanette.jpg" alt="foto Jeanette Harmon">
               </span>
-              <span>
+              <span class="nombreycargo">
                 <span class="fontblack">Jeanette Harmon</span>
                 <br>
                 <span class="fontblackLigth fuentecargo">Verified Graduate</span>
@@ -104,7 +104,7 @@
               <span>
                 <img class="foto" src="/images/image-patrick.jpg" alt="foto Patrick Abrams">
               </span>
-              <span>
+              <span class="nombreycargo">
                 <span class="fontwhite">Patrick Abrams</span>
                 <br>
                 <span class="fontgris fuentecargo">Verified Graduate</span>
@@ -131,7 +131,7 @@
               <span>
                 <img class="foto" src="/images/image-kira.jpg" alt="foto Kira Whittle">
               </span>
-              <span>
+              <span class="nombreycargo">
                 <span class="fontblack">Kira Whittle </span>
                 <br>
                 <span class="fontblackLigth fuentecargo">Verified Graduate</span>
