--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
               <span>
                 <img class="foto" src="/images/image-daniel.jpg" alt="foto Daniel Clifford">
               </span>
-              <span class="nombreycargo">
+              <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+              <span>
                 <span class="fontwhite">Daniel Clifford </span>
                 <br>
                 <span class="fontgris fuentecargo">Verified Graduate</span>
